# ComfyUI-Simple_QR_Codes

./: README.md  __init__.py  pyproject.toml  requirements.txt
nodes/: create_frame_01.py  qr_codes.py  qr_codes_circular.py  qr_codes_reader.py  qr_codes_segno.py  qr_codes_segno_logo.py  qr_codes_segno_simple.py  qr_codes_style_color.py  show_data.py
support/: web_color_table.md  web_colors.md
