[project]
name = "ComfyUI-Simple_QR_Codes"
description = "ComfyUI node for writing and reading QR codes."
version = "0.0.0.4"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/zentrocdot/ComfyUI_Simple_QR_Codes"
# Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "zentrocdot"
DisplayName = "ComfyUI-Simple_QR_Codes"
Icon = "https://github.com/zentrocdot/ComfyUI-Simple_QR_Codes/blob/main/images/logo.jpg"
